elastic/ad-policy/cnp-autopol-ingress-griuqlsctedwbvs.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-autopol-ingress-griuqlsctedwbvs
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: elasticsearch
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: kibana
        k8s:io.kubernetes.pod.namespace: default
    toPorts:
    - ports:
      - port: "9200"
        protocol: TCP
